<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/travelMode"/>

    <TextView
        android:id="@+id/detail_fragment_travel_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance"
        android:text="@string/travelMode"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/origin"/>

    <TextView
        android:id="@+id/detail_fragment_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance"
        android:text="@string/origin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/destination"/>
    <TextView
        android:id="@+id/detail_fragment_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance"
        android:text="@string/destination"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/arrivalTime"/>
    <TextView
        android:id="@+id/detail_fragment_arrival_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance"
        android:text="@string/arrivalTime"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/departure_time"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/detail_fragment_departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AppTheme.TextAppearance"
            android:text="HH:MM"/>

        <TextView
            android:layout_marginLeft="2pt"
            android:id="@+id/detail_fragment_delayed_departure_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AppTheme.TextAppearance.Highlight"
            android:text="+HH:MM"/>
    </LinearLayout></LinearLayout>

    <FrameLayout
        android:id="@+id/detail_fragment_maps_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:minHeight="300dp">
    </FrameLayout>

</LinearLayout>